# openldap_sample_code

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  defines.h  groups  ldap_connection.h  project.config  set_debug_level.cpp  synch_search_with_attributes.cpp  synch_search_with_filter.cpp  synchronous_anonymous_search.cpp  synchronous_bind_search.cpp
scripts/: astyle.rc  dependencies.sh
